# appointment-booking

./: .gitignore  .replit  DEPLOYMENT.md  README.md  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  vercel.json
backend/: app.py  bookings.db  models.py  railway.json
public/: index.html
src/: App.js
src/pages/: AdminDashboard.js  BookingPage.js  ViewBookings.js
