[tool.poetry]
name = "appointment-booking"
version = "0.1.0"
description = "Appointment booking app with Flask backend and React frontend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
flask-cors = "^4.0.0"
flask-mail = "^0.9.1"
sqlalchemy = "^2.0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 